# reasoning-on-a-manifold

./: .env.example  .gitignore  00_pilot_gate.py  01_generate_tasks.py  02_generate_chains.py  02b_generate_baseline_chains.py  03_annotate_chains.py  04_cleanup_tasks.py  04_extract_activations.py  04b_extract_annotator.py  04s_extract_safety.py  05_pca_analysis.py  05b_geometric_diagnostics.py  05c_cross_layer_probing.py  05d_subtype_clustering.py  06_build_steering.py  06b_steering_composition.py  07_evaluate_steering.py  07b_activation_patching.py  08_annotate_cbs.py  09_cbs_geometry.py  10_trajectory_build.py  11_trajectory_analysis.py  12_cbs_ablation.py  13_baseline_replication.py  14_safety_geometry.py  14b_annotate_dsr.py  AUDIT.md  CONFOUNDS_AND_REMEDIATION.md  GPU_GUIDE.md  INVENTORY.md  PROGRESS.md  README.md  build_phase6.py  build_steering_arms.py  check_chain_quality.py  compare_annotators.py  compute_layer_triangulation.py  make_explainer_figs.py  make_fresh_figures.py  (+15 more)
.claude/: settings.local.json
configs/: config.yaml
data/: MANIFEST.md
doc/: Phase1_Documentation_Reasoning_on_a_Manifold.docx  Phase2_Documentation_Reasoning_on_a_Manifold.docx  Phase3_Documentation_Reasoning_on_a_Manifold.docx  Phase4_Documentation_Reasoning_on_a_Manifold.docx  Phase5_Documentation_Reasoning_on_a_Manifold.docx
results/: pilot_diagnostics.json  pilot_per_sentence.csv
src/: activation_extraction.py  activation_patching.py  annotation.py  chain_gen.py  config.py  curvature.py  evaluation.py  hooks.py  intrinsic_dim.py  model_adapters.py  nulls.py  pca.py  row_provenance.py  steered_inference.py  steering.py  task_gen.py  text_offsets.py
tests/: synthetic.py  test_bootstrap_ci.py  test_cbs_extra.py  test_cbs_sentence_id_alignment.py  test_config.py  test_cross_model_bootstrap.py  test_curvature.py  test_cv_leakage.py  test_evaluation_aggregate.py  test_nulls.py  (+16 more)
(+147 files in other folders)
