[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "reasoning-on-manifold"
version = "0.1.0"
description = "Do individual reasoning behaviours in thinking LLMs have manifold structure?"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pandas>=2.0",
    "tqdm>=4.65",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.2",
    "transformers>=4.40",
    "accelerate>=0.30",
    "huggingface_hub>=0.22",
]

[tool.setuptools.packages.find]
include = ["src*"]
